# docs/swagger.json
@@ -8,20 +8,10 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/log/user/create": {
-            "post": {
-                "summary": "添加用户日志",
-                "parameters": [
-                    {
-                        "description": "json",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.PushJson"
-                        }
-                    }
-                ],
+        "/ping": {
+            "get": {
+                "description": "连接测试",
+                "summary": "ping",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -32,7 +22,7 @@
                 }
             }
         },
-        "/log/user/retrieve": {
+        "/user/log/retrieve": {
             "get": {
                 "summary": "获取用户日志",
                 "parameters": [
@@ -68,43 +58,18 @@
                 }
             }
         },
-        "/ping": {
-            "get": {
-                "description": "ping test",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "ping",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.ApiResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/name": {
-            "get": {
-                "description": "A test for params",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "GetUser",
+        "/user/log/upload": {
+            "post": {
+                "summary": "添加用户日志",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "userId",
-                        "name": "some_id",
-                        "in": "path",
-                        "required": true
+                        "description": "json",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PushJson"
+                        }
                     }
                 ],
                 "responses": {
@@ -136,10 +101,10 @@
         "models.EventInfo": {
             "type": "object",
             "properties": {
-                "append": {
+                "act_time": {
                     "type": "string"
                 },
-                "created_at": {
+                "append": {
                     "type": "string"
                 }
             }
